# ivim_tensor

./: .gitignore  20210314-ivim_tensor.ipynb  20210316-eda.ipynb  20210409-simulations.ipynb  20210410-data.ipynb  LICENSE  ivim_tensor.ipynb  ivim_tensor.py  setup.cfg  setup.py  test_ivim_tensor.py
.github/workflows/: test.yml
docs/: 20210316-eda.ipynb  20210321-rotations.ipynb  20210409-simulations.ipynb  20210410-data.ipynb  20210411-explore-results.ipynb
ivim_tensor/: __init__.py  ivim_tensor.py
ivim_tensor/tests/: test_ivim_tensor.py
