[metadata]
name = ivim_tensor
url = https://github.com/arokem/ivim_tensor
download_url = https://github.com/arokem/ivim_tensor
author = Ariel Rokem
author_email = arokem@gmail.com
maintainer = Ariel Rokem
maintainer_email = arokem@gmail.com
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Scientific/Engineering

license = BSD License
description = IVIM tensor
long_description = file:README.md
long_description_content_type = text/markdown
platforms = OS Independent

[options]
setup_requires =
  setuptools_scm
python_requires = >=3.7
install_requires =
    dipy>=1.4.0,<1.5.0
zip_safe = False
include_package_data = True
packages = find:

[options.extras_require]
dev =
    pytest==6.0.1
    pytest-cov==2.10.0
    flake8
